refactored lots by adding css classes. also fixed wrong position of connection line and being able to remove it when it doesnt have a destination

--- a/apps/webnet-builder-frontend/src/app/pages/nn-builder/nn-builder.component.scss
+++ b/apps/webnet-builder-frontend/src/app/pages/nn-builder/nn-builder.component.scss
@@ -7,7 +7,6 @@
     width: 1200px;
     border: 1px solid black;
     margin-right: 20px;
-    //flex: 1;
 
     #inner-svg-container {
       height: 100%;
@@ -15,3 +14,47 @@
     }
   }
 }
+
+.layer-group {
+  .layer {
+    cursor: default;
+    stroke: black;
+    stroke-width: 1;
+  }
+
+  .input-anchor-group {
+    fill: red;
+
+    &.hovered {
+      fill: yellow;
+    }
+  }
+
+  .output-anchor-group {
+    fill: blue;
+
+    &.hovered {
+      cursor: crosshair;
+    }
+    &.dragged {
+      fill: yellow;
+    }
+  }
+  &.selected {
+    .layer {
+      fill: lightgray !important;
+    }
+  }
+
+  &.hovered {
+    .selectable {
+      cursor: pointer;
+    }
+
+    .layer {
+      stroke: red;
+      stroke-width: 2;
+    }
+  }
+}
+
